# PHD-AI-miniproject

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: kaggle_training_cells.py
src/: __init__.py  config.py  dataset.py  evaluate.py  export_cache.py  kaggle_input.py  lit_module.py  model.py  preview.py  train.py
