[project]
name = "chest-xray-classifier"
version = "0.1.0"
description = "Chest X-ray pneumonia classification."
readme = { content-type = "text/markdown", text = """# Chest X-ray classifier

PyTorch Lightning project (CNN, MobileNetV2, ResNet18). Clone, then `uv sync` and `uv run python -m src.train --help`.

A fuller `README.md` may exist locally but is not required for installs.
""" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "lightning>=2.2,<3",
    "torch>=2.1,<3",
    "torchvision>=0.16,<1",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
